--- a/bibliography.bib
+++ b/bibliography.bib
@@ -145,6 +145,28 @@
     url       = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.39.6379},
 }
 
+@misc{Cachin98,
+    author = {Christian Cachin and Claude Crepeau and Julien Marcil},
+    title  = {Oblivious Transfer with a Memory-Bounded Receiver},
+    year   = {1998},
+    url    = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.26.1615},
+}
+
+@incollection{Dziembowski04,
+    author    = {Dziembowski, Stefan and Maurer, Ueli},
+    year      = {2004},
+    isbn      = {978-3-540-21935-4},
+    booktitle = {Advances in Cryptology - EUROCRYPT 2004},
+    volume    = {3027},
+    series    = {Lecture Notes in Computer Science},
+    editor    = {Cachin, Christian and Camenisch, JanL.},
+    doi       = {10.1007/978-3-540-24676-3_8},
+    title     = {On Generating the Initial Key in the Bounded-Storage Model},
+    url       = {http://dx.doi.org/10.1007/978-3-540-24676-3_8},
+    publisher = {Springer Berlin Heidelberg},
+    pages     = {126-137},
+}
+
 @inproceedings{Yao95,
     author    = {Yao, Andrew Chi-Chih},
     title     = {Security of Quantum Protocols Against Coherent Measurements},
@@ -346,4 +368,120 @@
     title     = {How unconditionally secure quantum bit commitment is possible},
     year      = {2001},
     url       = {http://arxiv.org/abs/quant-ph/0109055},
+}
+
+@inproceedings{Damgard05,
+    author    = {Ivan B. Damg\r{a}rd and Serge Fehr and Louis Salvail and Christian Schaffner},
+    title     = {Cryptography In the Bounded Quantum-Storage Model},
+    booktitle = {IN 46TH ANNUAL IEEE SYMPOSIUM ON FOUNDATIONS OF COMPUTER SCIENCE (FOCS)},
+    year      = {2005},
+    pages     = {449--458},
+    publisher = {IEEE Computer Society},
+    url       = {http://arxiv.org/abs/quant-ph/0508222},
+}
+
+@article{Wehner08,
+    title     = {Cryptography from Noisy Storage},
+    author    = {Wehner, Stephanie and Schaffner, Christian and Terhal, Barbara M.},
+    journal   = {Phys. Rev. Lett.},
+    volume    = {100},
+    issue     = {22},
+    pages     = {220502},
+    numpages  = {4},
+    year      = {2008},
+    month     = {Jun},
+    publisher = {American Physical Society},
+    doi       = {10.1103/PhysRevLett.100.220502},
+    url       = {http://arxiv.org/abs/0711.2895},
+}
+
+
+@article{Kent99,
+    title     = {Unconditionally Secure Bit Commitment},
+    author    = {Kent, Adrian},
+    journal   = {Phys. Rev. Lett.},
+    volume    = {83},
+    issue     = {7},
+    pages     = {1447--1450},
+    numpages  = {0},
+    year      = {1999},
+    month     = {Aug},
+    publisher = {American Physical Society},
+    doi       = {10.1103/PhysRevLett.83.1447},
+    url       = {http://arxiv.org/abs/quant-ph/9810068},
+}
+
+@article{Kent05,
+    author     = {Kent, Adrian},
+    title      = {Secure Classical Bit Commitment Using Fixed Capacity Communication Channels},
+    journal    = {J. Cryptol.},
+    issue_date = {September 2005},
+    volume     = {18},
+    number     = {4},
+    month      = sep,
+    year       = {2005},
+    issn       = {0933-2790},
+    pages      = {313--335},
+    numpages   = {23},
+    url        = {http://arxiv.org/abs/quant-ph/9906103},
+    doi        = {10.1007/s00145-005-0905-8},
+    acmid      = {1086425},
+    publisher  = {Springer-Verlag New York, Inc.},
+    address    = {Secaucus, NJ, USA},
+    keywords   = {Bit commitment, Quantum cryptography, Relativistic cryptography},
+}
+
+@article{Kent12,
+    title     = {Unconditionally Secure Bit Commitment by Transmitting Measurement Outcomes},
+    author    = {Kent, Adrian},
+    journal   = {Phys. Rev. Lett.},
+    volume    = {109},
+    issue     = {13},
+    pages     = {130501},
+    numpages  = {4},
+    year      = {2012},
+    month     = {Sep},
+    publisher = {American Physical Society},
+    doi       = {10.1103/PhysRevLett.109.130501},
+    url       = {http://arxiv.org/abs/1108.2879},
+}
+
+@article{Kent11,
+    title     = {Unconditionally Secure Bit Commitment with Flying Qudits},
+    year      = {2011},
+    author    = {Adrian Kent},
+    journal   = {New J. Phys},
+    volume    = {13},
+    url       = {http://arxiv.org/abs/1101.4620},
+}
+
+@article{Kent13,
+    year      = {2013},
+    issn      = {1570-0755},
+    journal   = {Quantum Information Processing},
+    volume    = {12},
+    number    = {2},
+    doi       = {10.1007/s11128-012-0431-6},
+    title     = {A no-summoning theorem in relativistic quantum theory},
+    url       = {http://arxiv.org/abs/1101.4612},
+    publisher = {Springer US},
+    keywords  = {Quantum information; Special relativity; Quantum cloning; Quantum cryptography},
+    author    = {Kent, Adrian},
+    pages     = {1023-1032},
+    language  = {English}
+}
+
+@article{Lunghi14,
+    title     = {Experimental Bit Commitment Based on Quantum Communication and Special Relativity},
+    author    = {Lunghi, T. and Kaniewski, J. and Bussi\`eres, F. and Houlmann, R. and Tomamichel, M. and Kent, A. and Gisin, N. and Wehner, S. and Zbinden, H.},
+    journal   = {Phys. Rev. Lett.},
+    volume    = {111},
+    issue     = {18},
+    pages     = {180504},
+    numpages  = {5},
+    year      = {2013},
+    month     = {Nov},
+    publisher = {American Physical Society},
+    doi       = {10.1103/PhysRevLett.111.180504},
+    url       = {http://arxiv.org/abs/1306.4801},
 }
